bug: fixing table positioning, removing cut off by adding some margin to the top of the tables.

--- a/web/modules/custom/cig_pods/css/admin-details-display.scss
+++ b/web/modules/custom/cig_pods/css/admin-details-display.scss
@@ -57,7 +57,7 @@ table {
 table.views-table.views-view-table.cols-3 {
   padding-left: 40px;
   width: 100%;
-  margin-top: 0px;
+  margin-top: 50px;
   margin-bottom: 0px;
 }
 
