--- a/web/modules/custom/cig_pods/css/admin-project-display.scss
+++ b/web/modules/custom/cig_pods/css/admin-project-display.scss
@@ -57,7 +57,7 @@ table.views-table.views-view-table.cols-5,
 table.views-table.views-view-table.cols-7 {
     padding-left: 40px;
     width:100%;
-    margin-top: 0px;
+    margin-top: 50px;
     margin-bottom: 0px;
 }
 
